examples/bad/field_assign_temporary.mko
// Must fail: field assign on a temporary is not an lvalue.
struct Point {
    x: int
}

fn origin() -> Point {
    return Point { x: 0 }
}

fn main() {
    origin().x = 1
}
